feat: add recording trash purge
